# multilangcrlb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conandata.yml  main.c  readme.mdx  snapcraft.yaml
gui/: alexraylib.desktop
i18n/: lang_en.json  lang_es.json
include/: fileLoaderSnap.h
snap/: snapcraft.yaml
snap/gui/: alexraylib.desktop
